tests/neg/i11994.scala
//> using options -explain-cyclic
implicit def foo[T <: Tuple.meow]: Unit = ??? // error
given [T <: Tuple.meow]: Unit = ??? // error
